# prictracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/instructions/: copilot.instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
backend/helpers/: auth.py  db.py  logger.py
backend/routers/: users.py
backend/schemas/: products.py  users.py
backend/src/: main.py  seed.py
backend/src/auth/: controller.py  models.py  service.py
backend/src/backend/: main.py  seed.py
backend/src/backend/helpers/: auth.py  db.py  logger.py
backend/src/backend/routers/: auth.py  config.py  users.py
backend/src/backend/schemas/: users.py
backend/src/config/: controller.py  models.py  service.py
backend/src/helpers/: db.py  logger.py  requester.py  seed.py  settings.py
backend/src/mail/: mailer.py  models.py
backend/src/mail/templates/: reset-password.html
backend/src/products/: controller.py  model.py  models.py
backend/src/scheduler/: models.py  scheduling.py
backend/src/scrapers/: amazon.py  ebay.py  models.py  newegg.py
backend/src/users/: controller.py  models.py
email-builder/: package.json  pnpm-lock.yaml
email-builder/emails/: reset-password.tsx
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/components/: Icon.svelte  SearchFilter.svelte
frontend/src/lib/: models.ts
frontend2/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend2/static/: fallback.html
(+21 files in other folders)
