[project]
name = "pricetracker"
version = "0.1.0"
description = "Web scraper for Amazon and Newegg"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
]
